--- a/data/breast_cancer.unrob.conf
+++ b/data/breast_cancer.unrob.conf
@@ -13,7 +13,7 @@ robust_training_verbose = false
 # step size shrinkage
 eta = 0.3
 # robust training eps
-robust_eps = 0.2
+robust_eps = 0.3
 # minimum loss reduction required to make a further partition
 gamma = 1.0
 # minimum sum of instance weight(hessian) needed in a child
@@ -23,12 +23,14 @@ max_depth = 6
 
 # Task Parameters
 # the number of round to do boosting
-num_round = 10
+num_round = 4
 # 0 means do not save any model except the final round model
-save_period = 1
+save_period = 0
 # The path of training data
-data = "data/breast_cancer_scale0.train"
+data = "data/breast_cancer.train.csv?format=csv&label_column=0"
 # The path of validation data, used to monitor training process, here [test] sets name of the validation set
-eval[test] = "data/breast_cancer_scale0.test"
+eval[test] = "data/breast_cancer.test.csv?format=csv&label_column=0"
 # The path of test data
-test:data = "data/breast_cancer_scale0.test"
+test:data = "data/breast_cancer.test.csv?format=csv&label_column=0"
+
+model_out = '../growtrees/models/gbdt/nature/nature_breast_cancer.bin'
