--- a/data/ijcnn.greedy.conf
+++ b/data/ijcnn.greedy.conf
@@ -4,13 +4,12 @@ booster = gbtree
 # choose logistic regression loss function for binary classification
 objective = binary:logistic
 # use robust learning
-tree_method = exact 
-
+tree_method = robust_centergreedy
 
 # nthread = 16
 # Tree Booster Parameters
 # step size shrinkage
-eta = 0.2
+eta = 0.3
 # robust training eps
 robust_eps = 0.2
 # minimum loss reduction required to make a further partition
@@ -18,19 +17,19 @@ gamma = 1.0
 # minimum sum of instance weight(hessian) needed in a child
 min_child_weight = 1
 # maximum depth of a tree
-max_depth = 4
+max_depth = 8
 
 robust_training_verbose=false
 # Task Parameters
 # the number of round to do boosting
-num_round = 80
+num_round = 60
 # 0 means do not save any model except the final round model
 save_period = 0
 # The path of training data
-data = "data/cod-rna.train.csv?format=csv&label_column=0"
+data = "data/ijcnn.train.csv?format=csv&label_column=0"
 # The path of validation data, used to monitor training process, here [test] sets name of the validation set
-eval[test] = "data/cod-rna.test.csv?format=csv&label_column=0"
+eval[test] = "data/ijcnn.test.csv?format=csv&label_column=0"
 # The path of test data
-test:data = "data/cod-rna.test.csv?format=csv&label_column=0"
+test:data = "data/ijcnn.test.csv?format=csv&label_column=0"
 
-model_out = '../growtrees/models/gbdt/cod-rna_new/nature_cod-rna.bin'
+model_out = '../growtrees/models/gbdt/greedy/greedy_ijcnn_center_eps0.2_nr60_md8.bin'
