--- a/data/binary_mnist.greedy.conf
+++ b/data/binary_mnist.greedy.conf
@@ -2,35 +2,32 @@
 # can be gbtree or gblinear
 booster = gbtree
 # choose logistic regression loss function for binary classification
-objective = binary:logistic
-# use robust learning
-tree_method = exact 
-
+objective = binary:logistic 
 
 # nthread = 16
 # Tree Booster Parameters
 # step size shrinkage
-eta = 0.2
-# robust training eps
-robust_eps = 0.2
+eta = 0.01
 # minimum loss reduction required to make a further partition
-gamma = 1.0
+gamma = 0.0
 # minimum sum of instance weight(hessian) needed in a child
 min_child_weight = 1
 # maximum depth of a tree
-max_depth = 4
-
+max_depth = 6
+robust_eps = 0.3
 robust_training_verbose=false
+tree_method = robust_centergreedy
+
 # Task Parameters
 # the number of round to do boosting
-num_round = 80
+num_round = 1000
 # 0 means do not save any model except the final round model
 save_period = 0
 # The path of training data
-data = "data/cod-rna.train.csv?format=csv&label_column=0"
+data = "data/binary_mnist.train.csv?format=csv&label_column=0"
 # The path of validation data, used to monitor training process, here [test] sets name of the validation set
-eval[test] = "data/cod-rna.test.csv?format=csv&label_column=0"
+eval[test] = "data/binary_mnist.test.csv?format=csv&label_column=0"
 # The path of test data
-test:data = "data/cod-rna.test.csv?format=csv&label_column=0"
+test:data = "data/binary_mnist.test.csv?format=csv&label_column=0"
 
-model_out = '../growtrees/models/gbdt/cod-rna_new/nature_cod-rna.bin'
+model_out = '../growtrees/models/gbdt/greedy/greedy_binary_mnist_center.bin'
