--- a/data/breast_cancer.unrob.conf
+++ b/data/breast_cancer.unrob.conf
@@ -11,7 +11,7 @@ robust_training_verbose = false
 # nthread = 16
 # Tree Booster Parameters
 # step size shrinkage
-eta = 0.3
+eta = 0.5
 # robust training eps
 robust_eps = 0.3
 # minimum loss reduction required to make a further partition
@@ -23,14 +23,14 @@ max_depth = 6
 
 # Task Parameters
 # the number of round to do boosting
-num_round = 4
+num_round = 4 
 # 0 means do not save any model except the final round model
 save_period = 0
 # The path of training data
-data = "data/breast_cancer.train.csv?format=csv&label_column=0"
+data = "data/breast_cancer_scale0.train"
 # The path of validation data, used to monitor training process, here [test] sets name of the validation set
-eval[test] = "data/breast_cancer.test.csv?format=csv&label_column=0"
+eval[test] = "data/breast_cancer_scale0.test"
 # The path of test data
-test:data = "data/breast_cancer.test.csv?format=csv&label_column=0"
+test:data = "data/breast_cancer_scale0.test"
 
-model_out = '../growtrees/models/gbdt/nature/nature_breast_cancer.bin'
+model_out = '../growtrees/models/gbdt/nature_breast_cancer.bin'
