update ijcnn conf files and data script

--- a/data/ijcnn.greedy.conf
+++ b/data/ijcnn.greedy.conf
@@ -6,7 +6,7 @@ objective = binary:logistic
 # use robust learning
 tree_method = robust_centergreedy
 
-# nthread = 16
+nthread = 16
 # Tree Booster Parameters
 # step size shrinkage
 eta = 0.3
@@ -32,4 +32,4 @@ eval[test] = "data/ijcnn.test.csv?format=csv&label_column=0"
 # The path of test data
 test:data = "data/ijcnn.test.csv?format=csv&label_column=0"
 
-model_out = '../growtrees/models/gbdt/greedy/greedy_ijcnn_center_eps0.2_nr60_md8.bin'
+model_out = '../growtrees/models/gbdt/greedy_ijcnn_center_eps0.2_nr60_md8.bin'
