--- a/data/ijcnn.unrob.conf
+++ b/data/ijcnn.unrob.conf
@@ -11,7 +11,7 @@ tree_method = exact
 # step size shrinkage
 eta = 0.3
 # robust training eps
-robust_eps = 0.05
+robust_eps = 0.1
 # minimum loss reduction required to make a further partition
 gamma = 1.0
 # minimum sum of instance weight(hessian) needed in a child
@@ -22,12 +22,14 @@ max_depth = 8
 robust_training_verbose=false
 # Task Parameters
 # the number of round to do boosting
-num_round = 100
+num_round = 60
 # 0 means do not save any model except the final round model
-save_period = 1
+save_period = 0
 # The path of training data
 data = "data/ijcnn1s0"
 # The path of validation data, used to monitor training process, here [test] sets name of the validation set
 eval[test] = "data/ijcnn1s0.t"
 # The path of test data
 test:data = "data/ijcnn1s0.t"
+
+model_out = '../growtrees/models/gbdt/nature_ijcnn.bin'
