update ijcnn training configs

--- a/data/ijcnn.unrob.conf
+++ b/data/ijcnn.unrob.conf
@@ -26,10 +26,11 @@ num_round = 60
 # 0 means do not save any model except the final round model
 save_period = 0
 # The path of training data
-data = "data/ijcnn1s0"
+data = "data/ijcnn.train.csv?format=csv&label_column=0"
 # The path of validation data, used to monitor training process, here [test] sets name of the validation set
-eval[test] = "data/ijcnn1s0.t"
+eval[test] = "data/ijcnn.test.csv?format=csv&label_column=0"
 # The path of test data
-test:data = "data/ijcnn1s0.t"
+test:data = "data/ijcnn.test.csv?format=csv&label_column=0"
+
 
 model_out = '../growtrees/models/gbdt/nature_ijcnn.bin'
